--- a/chat-sample/package.json
+++ b/chat-sample/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-use": "^15.3.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
