--- a/chat-sample/package.json
+++ b/chat-sample/package.json
@@ -15,7 +15,9 @@
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "react-use": "^15.3.4",
