--- a/react-sample-project/package.json
+++ b/react-sample-project/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "npm": "^7.0.13",
     "react": "^16.8.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -44,7 +45,4 @@
   "devDependencies": {
     "webpack-cli": "^4.2.0"
   }
-
-  
-  
 }
